[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "6.2.0"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "mypy",
    "flake8",
    "commitizen",
    "pre-commit",
    "matplotlib",
    "twine",
    "pytest~=7.3",
    "pytest-benchmark~=4.0",
    "maturin>=1.4.0",
]

[tool.mypy]
mypy_path = "typings"

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "ReplayTables-andnp"
version = "6.2.0"
description = "A simple replay buffer implementation in python for sampling n-step trajectories"
authors = [
    {name = "Andy Patterson", email = "andnpatterson@gmail.com"},
]
dependencies = [
    "numba~=0.57",
    "numpy~=1.23",
    "scipy~=1.9",
    "lz4>=4.3.2",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"
